-Players now get events to deal with the rise of the Italian Communes
-Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
-Sardinia-Piedmont's Age of Ideology ability is now -10 global years of separatism
-Swapped Phrygian and Cappadokian culture colours
-Changed Fife's traditions for the glory of Dundee
-Minor history changes especially around Saxony and the Palatinate

#Balance
-Slightly upped the rate at which advisor cost increases
-It is no longer possible to take the Russian Crown if you have the Byzantine Monarchy government

#Fixes
-Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily, Lorraine, Aragon, Altsachsen, Denmark, Outremer, Worms, Poland
-The Baltic Orders should finally, and I mean finally, spawn with proper techs
-Fixed major bug preventing Industrialism from spawning for Rule Britannia owners
-Forming the following nations now properly gives you their missions: Russia (by reforms), Great Britain (diplomatically), Lotharingia (as any tag other than Lorraine), Spain, Aquitaine, Tunis
-There are no longer two separate decisions to form Dalmatia
-Fixed several issues with the Fragmentation of Poland disaster; it should now end as normal and have two clear outcomes in the ending event
-Refusing a province to become Germanic during the ostsiedlung will no longer cause nationwide unrest
-The Szekely and Szaszok culture events can no longer fire more than once
-Celje and Slovenia now use proper ship names from vanilla
-Fixed a ton of French minors not using proper ship names (should fix broken stuff like "Transport I" and "$PROVINCE$")
-Fixed a bugged Holy Orders agenda
-Fixed a ton of unit positioning errors across the map
-Removed several duplicated monarch/ship/leader names
-Corrected some Magyar DPNs
-Other minor localization/bug fixes

# v 2.1.3 #
