@@ -1795,7 +1795,7 @@ die_construct_speyer_cathedral_mission = {
 	prestige = 0.25
 	papal_influence = 0.25
 }
-die_secure_loyality_mission = {
+die_secure_loyalty_mission = {
 	province_warscore_cost = -0.1
 	diplomatic_reputation = 1
 }
