@@ -3,7 +3,7 @@ controller = BAV
 culture = bavarian
 religion = catholic
 hre = yes
-trade_goods = beer
+trade_goods = wine
 base_tax = 4
 base_production = 4
 base_manpower = 3
