@@ -1120,7 +1120,7 @@
  vn_boh_conquer_oberlausitz_desc: ""
  vn_boh_conquer_niederlausitz_title: "Assimiliert die Sorben"
  vn_boh_conquer_niederlausitz_desc: ""
- vn_boh_conquer_brandenburg_title: "Brandenburg der Luxemburger"
+ vn_boh_conquer_brandenburg_title: "Luxemburg-\nBrandenburg"
  vn_boh_conquer_brandenburg_desc: ""
  vn_boh_kingdom_of_bohemia_title: "Königs-\nkrönung"
  vn_boh_kingdom_of_bohemia_desc: ""
@@ -1129,7 +1129,7 @@
  vn_boh_bohemian_electorate.tt: "At least §Y5§! Electors are backing [Root.GetName] to become Emperor."
  vn_boh_castles_of_ottokar_title: "Burgen von Ottokar"
  vn_boh_castles_of_ottokar_desc: ""
- vn_boh_defense_from_the_mongols_title: "Verteidigung gegen Mongolen"
+ vn_boh_defense_from_the_mongols_title: "Verteidigt ge-\ngen Mongolen"
  vn_boh_defense_from_the_mongols_desc: ""
  vn_boh_manufactories_and_furnaces_title: "Industrialisiert Böhmen"
  vn_boh_manufactories_and_furnaces_desc: ""
@@ -2584,7 +2584,7 @@
  vn_als_cross_the_rhine.tt: "Vereint Alamannien!"
  vn_als_dethrone_the_bishops_title: "Entthront die Bischöfe"
  vn_als_dethrone_the_bishops_desc: ""
- vn_als_consolidate_the_vosges_title: "Konsolidierung der Vogesen"
+ vn_als_consolidate_the_vosges_title: "Konsolidiert die Vogesen"
  vn_als_consolidate_the_vosges_desc: ""
  vn_als_rot_un_wiss_title: "Rot un Wiss"
  vn_als_rot_un_wiss_desc: ""
@@ -2601,7 +2601,7 @@
  vn_als_free_from_the_empire_title: "Frei vom Kaiserreich"
  vn_als_free_from_the_empire_desc: ""
  als_pioneer_the_printing_press_mission: "Ermöglichte den Buchdruck"
- als_legacy_of_martin_bucer_mission: "Vermächtnis von Martin Bucer"
+ als_legacy_of_martin_bucer_mission: "Martin Bucers Vermächtnis"
  als_route_des_vins_dalsace_mission: "La Route des Vins d'Alsace"
  als_unite_the_decapole_mission: "Vereinte die Dekapolis"
  als_cross_the_rhine_mission: "Überquerte den Rhein"
