@@ -1982,7 +1982,7 @@
  vn_ser_deal_with_romania_desc: "Wir haben wenig Kontakt mit den Rumänen auf der anderen Seite der Donau gehabt. Wir wissen wenig über ihre Motive, also werden wir, anstatt abzuwarten und es herauszufinden, Expeditionsstreitkräfte über den Fluss schicken; die Frage ist, sollen wir ihnen den Olivenzweig oder das Schwert reichen?"
  vn_ser_adriatic_fleet_title: "Adriatische Flotte"
  vn_ser_adriatic_fleet_desc: "Jetzt, da wir über Albanien und Duklja Zugang zum Meer haben, können wir diese große Wasserstraße nutzen und eine riesige Flotte aufbauen."
- vn_ser_isles_of_ionian_sea_title: "Inseln des ionischen Meeres"
+ vn_ser_isles_of_ionian_sea_title: "Inseln des ion-\nischen Meeres"
  vn_ser_isles_of_ionian_sea_desc: "Die ionischen Inseln waren immer wohlhabend; ob in den Händen der Italiener oder der Byzantiner, sie dienten als nützlicher Handelsknotenpunkt zwischen Konstantinopel und Venedig."
  vn_ser_tsar_of_romans_title: "Zar der Römer"
  vn_ser_tsar_of_romans_desc: "Während wir weiter in die griechische Halbinsel eindringen, ist es an der Zeit, uns auch als Oberherren von Hellas zu etablieren, indem wir den Titel des Zaren der Römer beanspruchen. Griechen, Albaner, Bosnier und Kroaten werden alle eins mit den Serben sein."
@@ -2019,7 +2019,7 @@
  vn_slz_counter_bavaria_desc: ""
  vn_slz_operate_salt_mines_title: "Betreibt Salzbergwerke"
  vn_slz_operate_salt_mines_desc: ""
- vn_slz_facilitate_trading_hub_title: "Ermöglicht ein Handelszentrum"
+ vn_slz_facilitate_trading_hub_title: "Ein Handels-\nzentrum"
  vn_slz_facilitate_trading_hub_desc: ""
  vn_slz_gain_imperial_favors_title: "Kaiserliche Gefälligkeiten"
  vn_slz_gain_imperial_favors_desc: ""
@@ -2032,9 +2032,9 @@
  vn_slz_survive_mediatization_title: "Überlebt die Mediatisierung"
  vn_slz_survive_mediatization.tt: "Es ist mindestens 5 Jahre her, dass uns der Reichsvorfall "Mediatisierung" passiert ist."
  vn_slz_survive_mediatization_desc: ""
- vn_slz_enlarge_our_possessions_title: "Vergrößert unsere Besitztümer"
+ vn_slz_enlarge_our_possessions_title: "Besitztümer vergrößern"
  vn_slz_enlarge_our_possessions_desc: ""
- vn_slz_connect_our_exclaves_title: "Verbindet unsere Exklaven"
+ vn_slz_connect_our_exclaves_title: "Verbindet die Exklaven"
  vn_slz_connect_our_exclaves_desc: ""
  vn_slz_rival_aquileia_title: "Rivalisiert Aquileia"
  vn_slz_rival_aquileia_desc: ""
