@@ -248,7 +248,7 @@
  vn_iberian_agriculture_title: "Fördert die Landwirtschaft"
  vn_iberian_agriculture_desc: "Das warme, aber nicht zu heiße Klima von Iberien macht die Halbinseln zu einem idealen Ort für den Anbau von Dutzenden von verschiedenen Feldfrüchten. Unser Volk wird nie wieder hungern."
  vn_iberian_agriculture.tt: "Besitzt mindestens §Y12§!Provinzen mit einer §YWerkstatt§! oder einem §YZahlhaus§!, die §YGetreide§!, §YWein§!, §YMais§!, §YSeide§! oder §YOliven§! produzieren."
- vn_start_the_reconquista_title: "Beginnt mit der Reconquista"
+ vn_start_the_reconquista_title: "Beginn der Reconquista"
  vn_start_the_reconquista_desc: "Die südlichen Gebiete der Iberischen Halbinsel befinden sich derzeit im Besitz von geschwächten muslimischen Herrschern. Wir sollten diese Gelegenheit nutzen, um mit unserer Armee in diese Regionen einzudringen."
  vn_break_the_taifas_title: "Brecht die Taifas"
  vn_break_the_taifas_desc: "Die Taifas schwächen und verstricken sich gegenseitig in dynastische Konflikte. Solange sie nicht unter dem Schutz eines repressiven Herrschers aus Nordafrika stehen, sind sie hilflos und unserer Willkür ausgeliefert. Wir müssen sie ein für alle Mal besiegen und zerschlagen."
