@@ -1464,8 +1464,8 @@
  vn_die_conquer_lorraine_desc: ""
  vn_die_conquer_burgundy_title: "Kings of Burgundy"
  vn_die_conquer_burgundy_desc: ""
- vn_die_secure_loyality_title: "Imperial Loyalty"
- vn_die_secure_loyality_desc: ""
+ vn_die_secure_loyalty_title: "Imperial Loyalty"
+ vn_die_secure_loyalty_desc: ""
  vn_die_weaken_the_princes_title: "Electoral Debilitation"
  vn_die_weaken_the_princes_desc: ""
  vn_die_weaken_the_princes.tt: "No §YElector§! has a higher total development than §Y[Root.GetName]§!."
@@ -3310,8 +3310,8 @@
  desc_die_connect_worms_and_speyer_mission: ""
  die_saxon_rebellion_mission: "Restoration of Order"
  desc_die_saxon_rebellion_mission: ""
- die_secure_loyality_mission: "Claims to Power"
- desc_die_secure_loyality_mission: ""
+ die_secure_loyalty_mission: "Claims to Power"
+ desc_die_secure_loyalty_mission: ""
  die_conquer_rome_mission: "Humiliation of the Papacy"
  desc_die_conquer_rome_mission: ""
  die_conquer_lorraine_mission: "Fortresses of Lorraine"
