@@ -1447,44 +1447,44 @@
  vn_kie_conquer_prussia_title: "Settle in Salessje"
  vn_kie_conquer_prussia_desc: ""
 #Worms
- vn_die_italian_alliances_title: "Italian Alliances"
+ vn_die_italian_alliances_title: "Italienische Allianzen"
  vn_die_italian_alliances_desc: ""
- vn_die_italian_alliances.tt: "At least §Y3§! allies:\nCapital is in the §YItaly§! superregion.\nHave at least §Y150§! opinion of §Y[Root.GetName]§!."
- vn_die_solve_the_investiture_controversy_title: "Solve the Controversy"
+ vn_die_italian_alliances.tt: "Mindestens §Y3§! Verbündete:\nHauptstadt liegt in der Überregion §YItalien§!.\nHat mindestens §Y150§! Meinung von §Y[Root.GetName]§!."
+ vn_die_solve_the_investiture_controversy_title: "Löst den Investiturstreit"
  vn_die_solve_the_investiture_controversy_desc: ""
- vn_die_conquer_rome_title: "Plundering of Rome"
+ vn_die_conquer_rome_title: "Plünderung Roms"
  vn_die_conquer_rome_desc: ""
- vn_die_construct_speyer_cathedral_title: "Speyer Cathedral"
+ vn_die_construct_speyer_cathedral_title: "Kathedrale von Speyer"
  vn_die_construct_speyer_cathedral_desc: ""
- vn_die_connect_worms_and_speyer_title: "Improve the Infrastructure"
+ vn_die_connect_worms_and_speyer_title: "Verbessert die Infrastruktur"
  vn_die_connect_worms_and_speyer_desc: ""
- vn_die_conquer_metz_title: "Seize Metz"
+ vn_die_conquer_metz_title: "Erobert Metz"
  vn_die_conquer_metz_desc: ""
- vn_die_conquer_lorraine_title: "Claim Lorraine"
+ vn_die_conquer_lorraine_title: "Beansprucht Lothringen"
  vn_die_conquer_lorraine_desc: ""
- vn_die_conquer_burgundy_title: "Kings of Burgundy"
+ vn_die_conquer_burgundy_title: "Könige von Burgund"
  vn_die_conquer_burgundy_desc: ""
- vn_die_secure_loyality_title: "Imperial Loyalty"
- vn_die_secure_loyality_desc: ""
- vn_die_weaken_the_princes_title: "Electoral Debilitation"
+ vn_die_secure_loyalty_title: "Kaiserliche Loyalität"
+ vn_die_secure_loyalty_desc: ""
+ vn_die_weaken_the_princes_title: "Kurfürstliche Entmachtung"
  vn_die_weaken_the_princes_desc: ""
- vn_die_weaken_the_princes.tt: "No §YElector§! has a higher total development than §Y[Root.GetName]§!."
- vn_die_conquer_erbach_title: "Cross the Odenwald"
+ vn_die_weaken_the_princes.tt: "Kein §YKurfürst§! hat eine höhere Entwicklung als §Y[Root.GetName]§!."
+ vn_die_conquer_erbach_title: "Durchquert den Odenwald"
  vn_die_conquer_erbach_desc: ""
- vn_die_conquer_franconia_title: "Dukes of Franconia"
+ vn_die_conquer_franconia_title: "Herzöge von Franken"
  vn_die_conquer_franconia_desc: ""
- vn_die_saxon_rebellion_title: "End Saxon Rebellion"
+ vn_die_saxon_rebellion_title: "Beendet den Sachsenkrieg"
  vn_die_saxon_rebellion_desc: ""
- vn_die_saxon_rebellion.tt: "No elector:\nIs NOT a subject.\nIs NOT allied with §Y[Root.GetName]§!.\nHas NOT been defeated by §Y[Root.GetName]§! in war in the past 50 years."
- vn_die_conquer_bavaria_title: "Conquer Bavaria"
+ vn_die_saxon_rebellion.tt: "Kein Kurfürst:\nIst KEIN Untertan.\nIst NICHT verbündet mit §Y[Root.GetName]§!.\nWurde in den letzten 50 Jahren nicht von §Y[Root.GetName]§! in einem Krieg besiegt."
+ vn_die_conquer_bavaria_title: "Erobert Bayern"
  vn_die_conquer_bavaria_desc: ""
- vn_die_feudal_obligations_title: "Feudal Obligations"
+ vn_die_feudal_obligations_title: "Feudal-\nverpflichtungen"
  vn_die_feudal_obligations_desc: ""
- vn_die_conquer_baden_title: "Cross the Rhine"
+ vn_die_conquer_baden_title: "Überquert den Rhein"
  vn_die_conquer_baden_desc: ""
- vn_die_conquer_swabia_title: "Weaken Swabia"
+ vn_die_conquer_swabia_title: "Schwächt Schwaben"
  vn_die_conquer_swabia_desc: ""
- vn_die_conquer_wormsgau_title: "Unite Wormsgau"
+ vn_die_conquer_wormsgau_title: "Vereint den Wormshgau"
  vn_die_conquer_wormsgau_desc: ""
 #Hungary
  vn_hun_conquer_transylvania_title: "Integrate Transylvania"
@@ -1550,51 +1550,51 @@
  vn_hun_survive_fall_of_arpads_desc: ""
  vn_hun_survive_fall_of_arpads.tt: "Complete the Fall of the Árpáds disaster or reach the Age of Discovery without triggering it."
 #Flanders
- vn_fla_pilgrimage_to_jersualem_title: "Pilgrimage to Jerusalem"
+ vn_fla_pilgrimage_to_jersualem_title: "Pilgerreise nach Jerusalem"
  vn_fla_pilgrimage_to_jersualem_desc: ""
- vn_fla_conquer_the_holy_land_title: "Holdings in Palestine"
+ vn_fla_conquer_the_holy_land_title: "Besitztümer in Palästina"
  vn_fla_conquer_the_holy_land_desc: ""
- vn_fla_conquer_artois_title: "Acquire Artois"
+ vn_fla_conquer_artois_title: "Erlangt Artois"
  vn_fla_conquer_artois_desc: ""
- vn_fla_conquer_antwerp_title: "Conquer Antwerp"
+ vn_fla_conquer_antwerp_title: "Erobert Antwerpen"
  vn_fla_conquer_antwerp_desc: ""
- vn_fla_conquer_holland_title: "Humiliate Holland"
+ vn_fla_conquer_holland_title: "Erniedrigt Holland"
  vn_fla_conquer_holland_desc: ""
- vn_fla_renovate_gravensteen_title: "Renovate Gravensteen"
+ vn_fla_renovate_gravensteen_title: "Renoviert Gravensteen"
  vn_fla_renovate_gravensteen_desc: ""
- vn_fla_join_the_hundred_years_war_title: "Between Two Titans"
+ vn_fla_join_the_hundred_years_war_title: "Zwischen zwei Titanen"
  vn_fla_join_the_hundred_years_war_desc: ""
- vn_fla_join_the_hundred_years_war.tt: "The §YHundred Years' War§! is ongoing."
- vn_fla_join_the_hundred_years_war.ss: "The §YHundred Years' War§! is ongoing or over."
+ vn_fla_join_the_hundred_years_war.tt: "Der §YHundertjährige Krieg§! ist im Gange."
+ vn_fla_join_the_hundred_years_war.ss: "Der §YHundertjährige Krieg§! ist im Gange oder vorbei."
  vn_fla_conquer_brabant_title: "Conquer Brabant"
  vn_fla_conquer_brabant_desc: ""
- vn_fla_twofold_fiefdom_title: "Twofold Fiefdom"
+ vn_fla_twofold_fiefdom_title: "Zweigeteiltes Lehen"
  vn_fla_twofold_fiefdom_desc: ""
  vn_fla_twofold_fiefdom.tt: " allies are part of the §YFrench§! culture group and have at least §Y150§! opinion of §Y[Root.GetName]§!."
  vn_fla_twofold_fiefdom.ss: "allies are part of the §YGermanic§! or §YDutch§! culture group and have at least §Y150§! opinion of §Y[Root.GetName]§!."
- vn_fla_conquer_hainaut_title: "Succession of Hainaut"
+ vn_fla_conquer_hainaut_title: "Nachfolge des Hennegaus"
  vn_fla_conquer_hainaut_desc: ""
- vn_fla_conquer_liege_title: "Seize Liege"
+ vn_fla_conquer_liege_title: "Erobert Lüttich"
  vn_fla_conquer_liege_desc: ""
- vn_fla_conquer_calais_title: "Besiege Calais"
+ vn_fla_conquer_calais_title: "Belagert Calais"
  vn_fla_conquer_calais_desc: ""
- vn_fla_conquer_picardy_title: "Secure Picardy"
+ vn_fla_conquer_picardy_title: "Sichert die Picardie"
  vn_fla_conquer_picardy_desc: ""
- vn_fla_conquer_utrecht_title: "Rule Utrecht"
+ vn_fla_conquer_utrecht_title: "Beherrscht Utrecht"
  vn_fla_conquer_utrecht_desc: ""
- vn_fla_establish_wool_guilds_title: "Invest in Wool Trade"
+ vn_fla_establish_wool_guilds_title: "Investiert in Wollhandel"
  vn_fla_establish_wool_guilds_desc: ""
- vn_fla_flamish_trade_fleet_title: "Establish a Trade Fleet"
+ vn_fla_flamish_trade_fleet_title: "Aufbau einer Handelsflotte"
  vn_fla_flamish_trade_fleet_desc: ""
- vn_fla_expand_brugges_title: "Expansion of Brugge"
+ vn_fla_expand_brugges_title: "Ausbauten in Brügge"
  vn_fla_expand_brugges_desc: ""
- vn_fla_establish_cloth_hall_title: "Cloth Halls of Flanders"
+ vn_fla_establish_cloth_hall_title: "Stoffhallen von Flandern"
  vn_fla_establish_cloth_hall_desc: ""
- vn_fla_dominate_the_channel_title: "Break English Dominance"
+ vn_fla_dominate_the_channel_title: "Englische Do-\nminanz brechen"
  vn_fla_dominate_the_channel_desc: ""
- vn_fla_conquer_chiny_title: "Control Chiny"
+ vn_fla_conquer_chiny_title: "Kontrolliert Chiny"
  vn_fla_conquer_chiny_desc: ""
- vn_fla_conquer_luxembourg_title: "Duchy of Luxembourg"
+ vn_fla_conquer_luxembourg_title: "Herzogtum Luxemburg"
  vn_fla_conquer_luxembourg_desc: ""
 #Epirus
  vn_epi_defend_coasts_title: "Defend our Coast"
@@ -3309,8 +3309,8 @@
  desc_die_connect_worms_and_speyer_mission: ""
  die_saxon_rebellion_mission: "Restoration of Order"
  desc_die_saxon_rebellion_mission: ""
- die_secure_loyality_mission: "Claims to Power"
- desc_die_secure_loyality_mission: ""
+ die_secure_loyalty_mission: "Claims to Power"
+ desc_die_secure_loyalty_mission: ""
  die_conquer_rome_mission: "Humiliation of the Papacy"
  desc_die_conquer_rome_mission: ""
  die_conquer_lorraine_mission: "Fortresses of Lorraine"
