@@ -13,7 +13,7 @@ vn_die_missions_slot_1 = {
 	}
     has_country_shield = yes
     
-    vn_die_secure_loyality = {
+    vn_die_secure_loyalty = {
         position = 1
         icon = feast_of_pheasants
 		required_missions = { }
@@ -55,7 +55,7 @@ vn_die_missions_slot_1 = {
 		}
 		effect = {
             add_country_modifier = {
-                name = die_secure_loyality_mission
+                name = die_secure_loyalty_mission
                 duration = 9125
             }
 		}
@@ -63,7 +63,7 @@ vn_die_missions_slot_1 = {
     vn_die_saxon_rebellion = {
         position = 2
         icon = join_the_empire
-        required_missions = { vn_die_secure_loyality }
+        required_missions = { vn_die_secure_loyalty }
         provinces_to_highlight = {
             owner = {
                 NOT = { tag = ROOT }
