@@ -29,6 +29,7 @@
 -Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
 -Sardinia-Piedmont's Age of Ideology ability is now -10 global years of separatism
 -Swapped Phrygian and Cappadokian culture colours
+-Changed Ingolstadt's trade good to wine
 -Changed Fife's traditions for the glory of Dundee
 -Minor history changes especially around Saxony and the Palatinate
 
